k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp-deployment
spec:
  replicas: 4
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: sampleapp-pod
  template:
    metadata:
      labels:
        app: sampleapp-pod
    spec:
      containers:
      - image: xximjasonxx/sampleapp:1.0.0
        name: sampleapp-api
        ports:
        - containerPort: 80
