k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleapp-ingress
spec:
  ingressClassName: emissary
  rules:
  - host: 52.247.35.201.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sampleapp-service
            port: 
              number: 8080
